crates/parser/tests/fixtures/bad/duplicate_directive.dl
.decl edge(x: number, y: number)
.output edge
.output edge
